Add Income added....

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -120,6 +120,7 @@
 
 
                 <LinearLayout
+                    android:id="@+id/add_income"
                     android:background="?attr/selectableItemBackground"
                     android:layout_width="match_parent"
                     android:layout_height="48dp">
