--- a/app/src/main/res/layout/expenses_list_item_2.xml
+++ b/app/src/main/res/layout/expenses_list_item_2.xml
@@ -53,6 +53,7 @@
 
 
     <TextView
+        android:textColor="@color/grey_500"
         android:layout_marginRight="8dp"
         android:layout_marginTop="12dp"
         android:id="@+id/date"
@@ -129,7 +130,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:orientation="vertical"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content">
 
 
@@ -149,6 +151,36 @@
                 android:layout_marginTop="4dp"
                 android:text="FOODS AND DRINKS"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:padding="6dp"
+            android:layout_gravity="center_vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_gravity="center_vertical"
+                android:id="@+id/account_type_icon"
+                android:textSize="18sp"
+                android:gravity="center"
+                android:text="@string/icon_card"
+                fontPath="@string/font_awesome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:ignore="MissingPrefix" />
+
+            <TextView
+                android:id="@+id/account_name"
+                android:text="ACCOUNT"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
