--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,16 +15,19 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <ScrollView
+
+
+    <!--
+    <android.support.v4.widget.NestedScrollView
         android:background="@color/grey_200"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:gravity="center_vertical"
@@ -45,6 +48,7 @@
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerView"
+                    android:nestedScrollingEnabled="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
@@ -55,7 +59,7 @@
             <TextView
                 android:layout_marginTop="12dp"
                 android:gravity="center_vertical"
-                android:text="EXPENSES"
+                android:text="RECENT EXPENSES"
                 android:padding="8dp"
                 fontPath="@string/OpenSans_Bold"
                 tools:ignore="MissingPrefix"
@@ -72,6 +76,7 @@
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerViewExpenses"
+                    android:nestedScrollingEnabled="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
@@ -80,7 +85,16 @@
         </LinearLayout>
 
 
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
+    -->
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragmentContainer"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+
 
     <!-- Your FAB implementation -->
     <com.pranitkulkarni.expensemanager.Fab
