--- a/app/src/main/res/layout/activity_select_account.xml
+++ b/app/src/main/res/layout/activity_select_account.xml
@@ -25,6 +25,15 @@
                 android:layout_height="56dp" />
 
 
+            <ImageView
+                android:id="@+id/add_new"
+                android:padding="12dp"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/ic_add_white"
+                android:layout_width="48dp"
+                android:layout_height="56dp" />
+
+
             <TextView
                 android:textSize="20sp"
                 android:gravity="center_vertical"
