--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -123,7 +123,7 @@
             app:cardUseCompatPadding="true"
             android:id="@+id/fab_sheet"
             android:layout_width="250dp"
-            android:layout_height="180dp">
+            android:layout_height="230dp">
 
             <!-- TODO: Put your sheet items here -->
             <LinearLayout
@@ -134,6 +134,29 @@
 
 
                 <LinearLayout
+                    android:id="@+id/add_transfer"
+                    android:background="?attr/selectableItemBackground"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp">
+
+                    <ImageView
+                        android:padding="12dp"
+                        android:src="@drawable/ic_transfer"
+                        android:layout_width="48dp"
+                        android:layout_height="match_parent" />
+
+                    <TextView
+                        android:paddingLeft="8dp"
+                        android:gravity="center_vertical"
+                        android:textSize="16sp"
+                        android:text="Transfer"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_marginTop="8dp"
                     android:id="@+id/add_income"
                     android:background="?attr/selectableItemBackground"
                     android:layout_width="match_parent"
