--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,7 @@
     tools:context="com.pranitkulkarni.expensemanager.FragmentHome">
 
     <LinearLayout
+        android:focusableInTouchMode="true"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,7 +18,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <RelativeLayout
+            <LinearLayout
+                android:id="@+id/show_all_accounts"
+                android:background="?attr/selectableItemBackground"
+                android:orientation="vertical"
                 android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -29,15 +33,18 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:padding="8dp"
                     android:id="@+id/total_balance"
+                    fontPath="@string/OpenSans_SemiBold"
                     android:layout_centerVertical="true"
                     android:textSize="20sp"
-                    android:text="$4500"
+                    android:text="$ 4500"
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    tools:ignore="MissingPrefix" />
 
-            </RelativeLayout>
+            </LinearLayout>
 
 
         </android.support.v7.widget.CardView>
