--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -147,6 +147,15 @@
             android:layout_height="48dp" />
 
 
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:id="@+id/recyclerViewExpenses"
+            android:nestedScrollingEnabled="false"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <!--
         <android.support.v7.widget.CardView
             android:background="@android:color/white"
             android:padding="8dp"
@@ -160,6 +169,7 @@
                 android:layout_height="wrap_content"/>
 
         </android.support.v7.widget.CardView>
+        -->
 
     </LinearLayout>
 
